faq und agbs fixed

--- a/von Lars, kann eingebaut werden/faq.html
+++ b/von Lars, kann eingebaut werden/faq.html
@@ -27,3 +27,11 @@ du jedoch falsch liegen, dann gehst du leer aus. Es sind aber noch mehr Wettarte
 
 <p>Unter "Kontakt"(oben in der Navigation) findest du ein Eingabeformular, das für diesen Zweck gedacht ist</p>
 
+<h3>7. Muss Javascript im Browser aktiviert sein, damit diese Website funktioniert?</h3>
+
+<p>Ja, sonst können wir unsere Funktionalitäten leider nicht gewährleisten.</p>
+
+<h3>8. Welche Browser werden unterstützt?</h3>
+
+<p>Chrome und Firefox. Internet Explorer wird später noch reingenommen.</p>
+
